# travel-detail-demo

./: .gitignore  main.py  package.json  pyproject.toml
backend/: .gitignore  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @livekit.js  @swc.js  framer-motion.js  gsap.js  livekit-client.js  motion-dom.js  motion-utils.js  ogl.js
frontend/.next/static/chunks/: _app-pages-browser_node_modules_next_dist_client_dev_noop-turbopack-hmr_js.js  app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 2dc46e9b5ecf82be.webpack.hot-update.json  3a05ad5da30a88ac.webpack.hot-update.json  4256d585db26708e.webpack.hot-update.json  4d328b98f5938232.webpack.hot-update.json  8b64085247f9e866.webpack.hot-update.json  _app-pages-browser_node_modules_next_dist_client_dev_noop-turbopack-hmr_js.4d328b98f5938232.hot-update.js  app-pages-internals.4d328b98f5938232.hot-update.js  c2213b7492190262.webpack.hot-update.json  ed96174ed0713cea.webpack.hot-update.json  ef208be6af8d01ee.webpack.hot-update.json  webpack.00f507a7835a54c8.hot-update.js  webpack.015b42cc33b04dd6.hot-update.js  webpack.019c943a3d42694a.hot-update.js  webpack.01a24c316247f716.hot-update.js  webpack.03884f5885e12524.hot-update.js  (+339 more)
frontend/src/app/: layout.tsx  page.tsx
(+629 files in other folders)
